@@ -28,84 +28,95 @@ import java.util.List;
 @RequiredArgsConstructor
 public class SecurityConfig {
 
-    private final JwtAuthenticationFilter jwtAuthenticationFilter;
+        private final JwtAuthenticationFilter jwtAuthenticationFilter;
 
-    @Bean
-    public SecurityFilterChain securityFilterChain(HttpSecurity http) throws Exception {
-        http
-                .csrf(AbstractHttpConfigurer::disable)
-                .cors(cors -> cors.configurationSource(corsConfigurationSource()))
-                .sessionManagement(session -> session.sessionCreationPolicy(SessionCreationPolicy.STATELESS))
-                .authorizeHttpRequests(auth -> auth
-                        // Recursos estáticos e frontend Angular (PÚBLICO - sem autenticação)
-                        .requestMatchers("/", "/index.html", "/favicon.ico", "/*.js", "/*.css", "/*.ico", "/*.png",
-                                "/*.jpg", "/*.svg", "/*.woff", "/*.woff2", "/*.ttf", "/*.eot")
-                        .permitAll()
-                        .requestMatchers("/assets/**").permitAll()
+        @Bean
+        public SecurityFilterChain securityFilterChain(HttpSecurity http) throws Exception {
+                http
+                                .csrf(AbstractHttpConfigurer::disable)
+                                .cors(cors -> cors.configurationSource(corsConfigurationSource()))
+                                .sessionManagement(session -> session
+                                                .sessionCreationPolicy(SessionCreationPolicy.STATELESS))
+                                .authorizeHttpRequests(auth -> auth
+                                                // Recursos estáticos e frontend Angular (PÚBLICO - sem autenticação)
+                                                .requestMatchers("/", "/index.html", "/favicon.ico", "/*.js", "/*.css",
+                                                                "/*.ico", "/*.png",
+                                                                "/*.jpg", "/*.svg", "/*.woff", "/*.woff2", "/*.ttf",
+                                                                "/*.eot")
+                                                .permitAll()
+                                                .requestMatchers("/assets/**").permitAll()
 
-                        // Rotas do Angular Router (SPA) - Servem index.html
-                        .requestMatchers("/boards", "/boards/**", "/poker-room/**", "/login", "/register", "/join/**",
-                                "/auth/**")
-                        .permitAll()
+                                                // Rotas do Angular Router (SPA) - Servem index.html
+                                                .requestMatchers("/boards", "/boards/**", "/poker-room/**", "/login",
+                                                                "/register", "/join/**",
+                                                                "/auth/**")
+                                                .permitAll()
 
-                        // Rota de fallback para erros
-                        .requestMatchers("/error").permitAll()
+                                                // Rota de fallback para erros
+                                                .requestMatchers("/error").permitAll()
 
-                        // Endpoints públicos de API
-                        .requestMatchers("/api/v1/auth/**").permitAll()
-                        .requestMatchers("/swagger-ui/**", "/api-docs/**", "/swagger-ui.html").permitAll()
-                        .requestMatchers("/h2-console/**").permitAll()
-                        .requestMatchers(HttpMethod.OPTIONS, "/**").permitAll()
+                                                // Endpoints públicos de API
+                                                .requestMatchers("/api/v1/auth/**").permitAll()
+                                                // Endpoint de animação (bolinhas/emojis) - permitir POST explicitamente
+                                                // Usar * para um único segmento (ID da sessão) - ** não pode ter nada depois
+                                                .requestMatchers(HttpMethod.POST, "/api/v1/poker/sessions/*/animation").permitAll()
+                                                .requestMatchers("/swagger-ui/**", "/api-docs/**", "/swagger-ui.html")
+                                                .permitAll()
+                                                .requestMatchers("/h2-console/**").permitAll()
+                                                .requestMatchers(HttpMethod.OPTIONS, "/**").permitAll()
 
-                        // WebSocket endpoint - permitir para handshake inicial
-                        .requestMatchers("/ws/**").permitAll()
+                                                // WebSocket endpoint - permitir para handshake inicial
+                                                .requestMatchers("/ws/**").permitAll()
 
-                        // Demais endpoints requerem autenticação
-                        .anyRequest().authenticated())
-                .addFilterBefore(jwtAuthenticationFilter, UsernamePasswordAuthenticationFilter.class);
+                                                // Demais endpoints requerem autenticação
+                                                .anyRequest().authenticated())
+                                .addFilterBefore(jwtAuthenticationFilter, UsernamePasswordAuthenticationFilter.class);
 
-        return http.build();
-    }
+                return http.build();
+        }
 
-    @Bean
-    public PasswordEncoder passwordEncoder() {
-        return new BCryptPasswordEncoder();
-    }
+        @Bean
+        public PasswordEncoder passwordEncoder() {
+                return new BCryptPasswordEncoder();
+        }
 
-    @Bean
-    public CorsConfigurationSource corsConfigurationSource() {
-        // Configuração para endpoints REST (permite credenciais para JWT)
-        CorsConfiguration restConfiguration = new CorsConfiguration();
-        restConfiguration.setAllowedOriginPatterns(List.of(
-                "http://localhost:*",
-                "http://127.0.0.1:*",
-                "https://*"));
-        restConfiguration.setAllowedMethods(Arrays.asList("GET", "POST", "PUT", "DELETE", "OPTIONS", "PATCH"));
-        restConfiguration.setAllowedHeaders(List.of("*"));
-        restConfiguration.setExposedHeaders(List.of("Authorization"));
-        restConfiguration.setAllowCredentials(true); // Permitir credenciais para JWT
+        @Bean
+        public CorsConfigurationSource corsConfigurationSource() {
+                // Configuração para endpoints REST (permite credenciais para JWT)
+                CorsConfiguration restConfiguration = new CorsConfiguration();
+                restConfiguration.setAllowedOriginPatterns(List.of(
+                                "http://localhost:*",
+                                "http://127.0.0.1:*",
+                                "https://*"));
+                restConfiguration.setAllowedMethods(Arrays.asList("GET", "POST", "PUT", "DELETE", "OPTIONS", "PATCH"));
+                restConfiguration.setAllowedHeaders(List.of("*"));
+                restConfiguration.setExposedHeaders(List.of("Authorization"));
+                restConfiguration.setAllowCredentials(true); // Permitir credenciais para JWT
 
-        // Configuração específica para WebSocket SockJS
-        // O WebSocket não precisa de autenticação JWT - a sessão é identificada pelo ID
-        // Esta configuração é usada pelo Spring Security para processar requisições HTTP
-        // feitas pelo SockJS antes que o Spring WebSocket processe
-        // Permitir credenciais para evitar erros de CORS quando o SockJS envia credenciais
-        CorsConfiguration wsConfiguration = new CorsConfiguration();
-        wsConfiguration.setAllowedOriginPatterns(List.of(
-                "http://localhost:*",
-                "http://127.0.0.1:*",
-                "https://*"));
-        wsConfiguration.setAllowedMethods(Arrays.asList("GET", "POST", "OPTIONS"));
-        wsConfiguration.setAllowedHeaders(List.of("*"));
-        wsConfiguration.setAllowCredentials(true); // Permitir credenciais para evitar erros de CORS
+                // Configuração específica para WebSocket SockJS
+                // O WebSocket não precisa de autenticação JWT - a sessão é identificada pelo ID
+                // Esta configuração é usada pelo Spring Security para processar requisições
+                // HTTP
+                // feitas pelo SockJS antes que o Spring WebSocket processe
+                // Permitir credenciais para evitar erros de CORS quando o SockJS envia
+                // credenciais
+                CorsConfiguration wsConfiguration = new CorsConfiguration();
+                wsConfiguration.setAllowedOriginPatterns(List.of(
+                                "http://localhost:*",
+                                "http://127.0.0.1:*",
+                                "https://*"));
+                wsConfiguration.setAllowedMethods(Arrays.asList("GET", "POST", "OPTIONS"));
+                wsConfiguration.setAllowedHeaders(List.of("*"));
+                wsConfiguration.setAllowCredentials(true); // Permitir credenciais para evitar erros de CORS
 
-        UrlBasedCorsConfigurationSource source = new UrlBasedCorsConfigurationSource();
-        source.registerCorsConfiguration("/api/**", restConfiguration);
-        // Registrar CORS para /ws/** ANTES da configuração padrão
-        // Isso garante que endpoints SockJS como /ws/poker/info recebam headers CORS corretos
-        source.registerCorsConfiguration("/ws/**", wsConfiguration);
-        // Configuração padrão para outros endpoints (deve vir por último)
-        source.registerCorsConfiguration("/**", restConfiguration);
-        return source;
-    }
+                UrlBasedCorsConfigurationSource source = new UrlBasedCorsConfigurationSource();
+                source.registerCorsConfiguration("/api/**", restConfiguration);
+                // Registrar CORS para /ws/** ANTES da configuração padrão
+                // Isso garante que endpoints SockJS como /ws/poker/info recebam headers CORS
+                // corretos
+                source.registerCorsConfiguration("/ws/**", wsConfiguration);
+                // Configuração padrão para outros endpoints (deve vir por último)
+                source.registerCorsConfiguration("/**", restConfiguration);
+                return source;
+        }
 }
